--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.1",
-	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"isDesktopOnly": false
+    "id": "obsidian-export-vault-to-CSV",
+    "name": "Export Vault to CSV",
+    "version": "0.1",
+    "minAppVersion": "0.12.17",
+    "description": "This plugin exports every file and each line to a CSV in tabular format.",
+    "author": "Murf",
+    "authorUrl": "https://github.com/GitMurf",
+    "isDesktopOnly": true
 }
